# Duq-Engine

./: CMakeLists.txt  Compiling.txt  background.h  build.sh  cvars.h  game.h  informationType.h  libraries.h  main.cpp  map.h  materials.h  run-linux.sh  run.sh  sprites2D.h  staticShapes2D.h  text.h  time.h  vector.h
components/cli/: coloredText.h  informationType.h
components/function/: data.h
components/render/: sprites.h  window.h
include/glad/include/glad/: gl.h
params/: window.h
program/: qonsole.h
src/: libraries.h  main.cpp  main.cpp.old
src/components/entity/: entity.h  player.h  sprites.h
src/components/function/: converters.h  game.h  input.h  math.h  time.h
src/components/render/: camera.h  graphics.h  sprite.h  sprites.h  window.h
src/components/scene/: scene.h
usrfiles/: camera.h  player.h
